Redesign party mode

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -66,7 +66,7 @@ Color = White
 Font = 0
 Size = 15
 Align = 0
-Text = UltraStar WorldParty 23.03
+Text = UltraStar WorldParty 23.04
 
 [MainText2]
 X = 5
@@ -6593,6 +6593,32 @@ Texts = 5
 [PartyOptionsBackground]
 Tex = PartyBG
 
+[PartyBGButton]
+Y = 179
+H = 172
+W = 129
+Color = ColorDark
+DColor = White
+Type = Transparent
+Tex = ButtonFrameSquareBG
+Texts = 1
+Reflection = 0
+ReflectionSpacing = 0
+Fade = 1
+FadeText = 0
+FadeTexPos = 0
+SelectH = 175
+SelectW = 131
+
+
+[PartyButtonText]
+X = 64
+Y = 180
+Font = 0
+Size = 18
+Align = 1
+Color = White
+
 [PartyOptionsText1]
 X = 15
 Y = 20
@@ -6601,19 +6627,70 @@ Size = 30
 Color = White
 Text = PARTY_MODE
 
-[PartyOptionsSelectMode]
+[PartyOptionsStatic1]
+X = 100
+Y = 180
+H = 170
+W = 128
+Color = White
+Type = Transparent
+Tex = PartyChallengeButton
+
+[PartyOptionsButtonChallenge]
+Inheritance = PartyBGButton
+X = 99
+
+[PartyOptionsButtonChallengeText1]
+Inheritance = PartyButtonText
+Text = PARTY_MODE_CHALLENGE
+
+[PartyOptionsStatic2]
+X = 330
+Y = 180
+H = 170
+W = 128
+Color = White
+Type = Transparent
+Tex = PartyClassicButton
+
+[PartyOptionsButtonClassic]
+Inheritance = PartyBGButton
+X = 329
+
+[PartyOptionsButtonClassicText1]
+Inheritance = PartyButtonText
+Text = PARTY_MODE_CLASSIC
+
+[PartyOptionsStatic3]
+X = 550
+Y = 180
+H = 170
+W = 128
+Color = White
+Type = Transparent
+Tex = PartyTournamentButton
+
+[PartyOptionsButtonTournament]
+Inheritance = PartyBGButton
+X = 549
+
+[PartyOptionsButtonTournamentText1]
+Inheritance = PartyButtonText
+Text = PARTY_MODE_TOURNAMENT
+
+[PartyOptionsSelectLevel]
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
 TextSize = 16
 TypeSBG = Transparent
-Text = PARTY_SELECT_MODE
+Text = C_DIFFICULTY
 ShowArrows = 1
 OneItemOnly = 1
 X = 150
-Y = 170
+Y = 445
 W = 150
-H = 35
+H = 30
 SBGW = 300
 SkipX = 10
 Fields = 1
@@ -6626,24 +6703,19 @@ SBGColor = ColorDark
 STColor = White
 STDColor = GrayDark
 
-[PartyOptionsSelectLevel]
-Inheritance = PartyOptionsSelectMode
-Text = C_DIFFICULTY
-Y = 225
-
 [PartyOptionsSelectPlayList]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_PLAYLIST
-Y = 280
+Y = 490
 
 [PartyOptionsSelectPlayListItems]
-Inheritance = PartyOptionsSelectMode
-Y = 335
+Inheritance = PartyOptionsSelectLevel
+Y = 535
 
 [PartyOptionsSelectRounds]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_ROUNDS
-Y = 250
+Y = 450
 Fields = 7
 
 ############################
@@ -6660,7 +6732,7 @@ Tex = PartyBG
 Inheritance = PartyOptionsText1
 
 [PartyPlayerSelectTeams]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 SBGW = 150
 X = 200
 Y = 120
@@ -6668,7 +6740,7 @@ Text = PARTY_TEAMS
 Fields = 2
 
 [PartyPlayerSelectPlayers1]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 TexSBG = PartyPlayerSelectBG
 Text = PARTY_TEAMS_PLAYER1
 X = 310
@@ -6836,42 +6908,42 @@ Inheritance = PartyOptionsText2
 Text = PARTY_ROUNDS_LEGEND_CONTINUE
 
 [PartyRoundsSelectRoundCount]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_ROUNDCOUNT
 Y = 100
 
 [PartyRoundsSelectRound1]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE1
 Y = 155
 
 [PartyRoundsSelectRound2]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE2
 Y = 210
 
 [PartyRoundsSelectRound3]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE3
 Y = 265
 
 [PartyRoundsSelectRound4]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE4
 Y = 320
 
 [PartyRoundsSelectRound5]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE5
 Y = 375
 
 [PartyRoundsSelectRound6]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE6
 Y = 430
 
 [PartyRoundsSelectRound7]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_SELECTMODE7
 Y = 485
 
@@ -7521,7 +7593,8 @@ Inheritance = PartyOptionsText2
 Text = PARTY_MODE_TOURNAMENT_PLAYER_DESC
 
 [PartyTournamentPlayerSelectPlayers]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
+Y = 120
 Text = PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS
 
 [PartyTournamentPlayerPlayer1Name]
@@ -7694,21 +7767,21 @@ Inheritance = PartyOptionsText2
 Text = PARTY_MODE_TOURNAMENT_OPTIONS_DESC
 
 [PartyTournamentOptionsSelectRoundsFinal]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_MODE_TOURNAMENT_ROUNDS_FINAL
 
 [PartyTournamentOptionsSelectRounds2Final]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_MODE_TOURNAMENT_ROUNDS_2FINAL
 Y = 165
 
 [PartyTournamentOptionsSelectRounds4Final]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_MODE_TOURNAMENT_ROUNDS_4FINAL
 Y = 220
 
 [PartyTournamentOptionsSelectRounds8Final]
-Inheritance = PartyOptionsSelectMode
+Inheritance = PartyOptionsSelectLevel
 Text = PARTY_MODE_TOURNAMENT_ROUNDS_8FINAL
 Y = 275
 
