--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -18,297 +18,301 @@ Color=Violet
 [Textures]
 
 # # # Interface # # # 
-interface_dialog_background = [interface]dialog_background.svg
-Cursor = cursor.svg
-Cursor_Pressed = cursor2.svg
-ButtonClose = buttonclose.svg
+interface_dialog_background  =[interface]dialog_background.svg
+Cursor                       =cursor.svg
+Cursor_Pressed               =cursor2.svg
+ButtonClose                  =buttonclose.svg
 
 
 # # # MAIN # # #
-ButtonFrameBG    = [main]buttonframeBG.png
-ButtonSoloBG     = [main]buttonsoloBG.png
-ButtonPartyBG    = [main]buttonpartyBG.png
-ButtonJukeboxBG  = [main]buttonjukeboxBG.png
-ButtonAbout      = [main]buttonabout.svg
-ButtonStats      = [main]buttonstats.svg
-ButtonOption     = [main]buttonoption.svg
-ButtonExit       = [main]buttonexit.svg
-ButtonF          = buttonF.svg
-Button           = button.svg
-MainBar          = [main]mainBar.png
+ButtonFrameBG        =[main]buttonframeBG.png
+ButtonFrameSquareBG  =[main]buttonframesquareBG.png
+ButtonSoloBG         =[main]buttonsoloBG.png
+ButtonPartyBG        =[main]buttonpartyBG.png
+ButtonJukeboxBG      =[main]buttonjukeboxBG.png
+ButtonAbout          =[main]buttonabout.svg
+ButtonStats          =[main]buttonstats.svg
+ButtonOption         =[main]buttonoption.svg
+ButtonExit           =[main]buttonexit.svg
+ButtonF              =buttonF.svg
+Button               =button.svg
+MainBar              =[main]mainBar.png
 
 #Backgrounds
-LoadingBG      = [bg-load]basic.jpg
-TitleBG	   = [bg-main]violet.jpg
-MainBG         = [bg-main]violet.jpg
-SongBG         = [bg-main]violet.jpg
-ScoreScreenBG  = [bg-main]violet.jpg
-Top5BG         = [bg-main]violet.jpg
-OptionsBG      = [bg-main]violet.jpg
-PartyBG        = [bg-main]violet.jpg
+LoadingBG            =[bg-load]basic.jpg
+TitleBG              =[bg-main]violet.jpg
+MainBG               =[bg-main]violet.jpg
+SongBG               =[bg-main]violet.jpg
+ScoreScreenBG        =[bg-main]violet.jpg
+Top5BG               =[bg-main]violet.jpg
+OptionsBG            =[bg-main]violet.jpg
+PartyBG              =[bg-main]violet.jpg
 
-OptionsGeneralBG          = [bg-options]general.jpg
-OptionsGraphicsBG      = [bg-options]graphics.jpg
-OptionsSoundBG         = [bg-options]sound.jpg
-OptionsLyricsBG        = [bg-options]lyrics.jpg
-OptionsThemesBG        = [bg-options]themes.jpg
-OptionsMicrophonesBG   = [bg-options]microphones.jpg
-OptionsAdvancedBG      = [bg-options]advanced.jpg
-OptionsInternetBG      = [bg-options]internet.jpg
-OptionsWebcamBG        = [bg-options]webcam.jpg
-OptionsProfilesBG      = [bg-options]profiles.jpg
+OptionsGeneralBG       =[bg-options]general.jpg
+OptionsGraphicsBG      =[bg-options]graphics.jpg
+OptionsSoundBG         =[bg-options]sound.jpg
+OptionsLyricsBG        =[bg-options]lyrics.jpg
+OptionsThemesBG        =[bg-options]themes.jpg
+OptionsMicrophonesBG   =[bg-options]microphones.jpg
+OptionsAdvancedBG      =[bg-options]advanced.jpg
+OptionsInternetBG      =[bg-options]internet.jpg
+OptionsWebcamBG        =[bg-options]webcam.jpg
+OptionsProfilesBG      =[bg-options]profiles.jpg
 
 # # # SONG SELECT # # #
-SongSelection1up = [main]songSelection1up.svg
-SongSelection1dn = [main]songSelection1dn.svg
-SongSelection2 = [main]songSelection2.svg
-SongSelection3 = [main]songSelection3.png
-SongSelection4 = [main]songSelection4.png
-SongSelection5 = [main]songSelection5.png
-SongCover      = ../../covers/Common/NoCover.jpg
-SongDuetSinger = [song]duetsinger.png
-SongDuetSinger2 = [song]duetsinger2.png
-SongDuetSinger3 = [song]duetsinger3.png
+SongSelection1up      =[main]songSelection1up.svg
+SongSelection1dn      =[main]songSelection1dn.svg
+SongSelection2        =[main]songSelection2.svg
+SongSelection3        =[main]songSelection3.png
+SongSelection4        =[main]songSelection4.png
+SongSelection5        =[main]songSelection5.png
+SongCover             =../../covers/Common/NoCover.jpg
+SongDuetSinger        =[song]duetsinger.png
+SongDuetSinger2       =[song]duetsinger2.png
+SongDuetSinger3       =[song]duetsinger3.png
 
-Menubg = [menu]bg.png
+Menubg =[menu]bg.png
 
 # # Icons Legend # #
-icon_song_search      = [icon]song_search.svg
-icon_song_video       = [icon]song_video.png
-icon_song_medley      = [icon]song_medley.png
-icon_song_duet        = [icon]song_duet.png
-icon_song_rap         = [icon]song_rap.png
-icon_song_createdby   = [icon]song_createdby.png
-icon_song_fixedby     = [icon]song_fixedby.png
-icon_song_unvalidated = [icon]song_unvalidated.png
+icon_song_search      =[icon]song_search.svg
+icon_song_video       =[icon]song_video.png
+icon_song_medley      =[icon]song_medley.png
+icon_song_duet        =[icon]song_duet.png
+icon_song_rap         =[icon]song_rap.png
+icon_song_createdby   =[icon]song_createdby.png
+icon_song_fixedby     =[icon]song_fixedby.png
+icon_song_unvalidated =[icon]song_unvalidated.png
 
 # # # SING # # #
 #the bar where the lyrics reside
-LyricBar       = [sing]textBar.svg
-LyricBarDuet   = [sing]textBar.png
+LyricBar       =[sing]textBar.svg
+LyricBarDuet   =[sing]textBar.png
 
 #this one slides in, to tell you that singing starts immediately
-LyricHelpBar   = [sing]lyricsHelpBar.svg
+LyricHelpBar   =[sing]lyricsHelpBar.svg
 
 #the bar behind the timestuff
-TimeBar1      = [sing]timeBarBG.svg
+TimeBar1      =[sing]timeBarBG.svg
 
 #the time progress bar
-TimeBar      = [sing]timeBar.svg
+TimeBar      =[sing]timeBar.svg
 
 #linebonus, the thing that pop ups at the score
-LineBonusBack  = [sing]lineBonusPopUp.png
+LineBonusBack  =[sing]lineBonusPopUp.png
 
 #Singbar (the thing beneath the scores)
-SingBarBack    = [sing]singBarBack.png
-SingBarBar     = [sing]singBarBar.png
-SingBarFront   = [sing]singBarFront.png
+SingBarBack    =[sing]singBarBack.png
+SingBarBar     =[sing]singBarBar.png
+SingBarFront   =[sing]singBarFront.png
 
 #Background for scores
-ScoreBG        = [sing]scoreBg.png
+ScoreBG        =[sing]scoreBg.png
 
 #Background for the P1, P2 and so on
-P              = [sing]p.png
+P              =[sing]p.png
 
 #Pointer for lyrics
-Ball           = [sing]LyricsBall.png
+Ball           =[sing]LyricsBall.png
 
 #song name for medley mode
-SongName       = [sing]SongName.png
+SongName       =[sing]SongName.png
 
 
 # # # SCORE / TOP5 # # #
-ScoreBox        = [score]box.png
-ScoreGlassBox   = [score]glass_box.png
-ScoreLevel      = [score]level.png
-ScoreLevelRound = [score]levelRound.png
+ScoreBox        =[score]box.png
+ScoreGlassBox   =[score]glass_box.png
+ScoreLevel      =[score]level.png
+ScoreLevelRound =[score]levelRound.png
 
-ScoreLevel_Dark           = [score]level_dark.png
-ScoreLevel_Dark_Round     = [score]level_dark_round.png
+ScoreLevel_Dark           =[score]level_dark.png
+ScoreLevel_Dark_Round     =[score]level_dark_round.png
 
-ScoreLevel_Light          = [score]level_light.png
-ScoreLevel_Light_Round    = [score]level_light_round.png
+ScoreLevel_Light          =[score]level_light.png
+ScoreLevel_Light_Round    =[score]level_light_round.png
 
-ScoreLevel_Lightest       = [score]level_lightest.png
-ScoreLevel_Lightest_Round = [score]level_lightest_round.png
+ScoreLevel_Lightest       =[score]level_lightest.png
+ScoreLevel_Lightest_Round =[score]level_lightest_round.png
 
 # Boxes near the text, that show what color is for which bar
-ScoreBar_box_lightest = [score]bar_box_lightest.png
-ScoreBar_box_light    = [score]bar_box_light.png
-ScoreBar_box_dark     = [score]bar_box_dark.png
+ScoreBar_box_lightest =[score]bar_box_lightest.png
+ScoreBar_box_light    =[score]bar_box_light.png
+ScoreBar_box_dark     =[score]bar_box_dark.png
 
-ScoreEndCap     = [score]endcap.png
-ScoreLine       = [score]line.png
-PlayerNumberBox = [main]playerNumberBox.png
+ScoreEndCap     =[score]endcap.png
+ScoreLine       =[score]line.png
+PlayerNumberBox =[main]playerNumberBox.png
 
-Rating_0 = [score]rating_0.png
-Rating_1 = [score]rating_1.png
-Rating_2 = [score]rating_2.png
-Rating_3 = [score]rating_3.png
-Rating_4 = [score]rating_4.png
-Rating_5 = [score]rating_5.png
-Rating_6 = [score]rating_6.png
-Rating_7 = [score]rating_7.png
+Rating_0 =[score]rating_0.png
+Rating_1 =[score]rating_1.png
+Rating_2 =[score]rating_2.png
+Rating_3 =[score]rating_3.png
+Rating_4 =[score]rating_4.png
+Rating_5 =[score]rating_5.png
+Rating_6 =[score]rating_6.png
+Rating_7 =[score]rating_7.png
 
 # # # OPTIONS # # #
-Optionsbuttongeneral     = [Options]buttongeneral.svg
-Optionsbuttongraphics    = [Options]buttongraphics.svg
-Optionsbuttonsound       = [Options]buttonsound.svg
-Optionsbuttonlyrics      = [Options]buttonlyrics.svg
-Optionsbuttondesign      = [Options]buttondesign.svg
-Optionsbuttonmicrophones = [Options]buttonmicrophones.svg
-Optionsbuttonadvanced    = [Options]buttonadvanced.svg
-Optionsbuttonnetwork     = [Options]buttonnetwork.svg
-Optionsbuttonwebcam      = [Options]buttonwebcam.svg
-Optionsbuttonprofiles    = [Options]buttonprofiles.svg
-Optionsbuttonsongdir     = [Options]buttonsongdir.svg
+Optionsbuttongeneral     =[Options]buttongeneral.svg
+Optionsbuttongraphics    =[Options]buttongraphics.svg
+Optionsbuttonsound       =[Options]buttonsound.svg
+Optionsbuttonlyrics      =[Options]buttonlyrics.svg
+Optionsbuttondesign      =[Options]buttondesign.svg
+Optionsbuttonmicrophones =[Options]buttonmicrophones.svg
+Optionsbuttonadvanced    =[Options]buttonadvanced.svg
+Optionsbuttonnetwork     =[Options]buttonnetwork.svg
+Optionsbuttonwebcam      =[Options]buttonwebcam.svg
+Optionsbuttonprofiles    =[Options]buttonprofiles.svg
+Optionsbuttonsongdir     =[Options]buttonsongdir.svg
 
-SelectBG                 = [Options]SelectBG.svg
+SelectBG                 =[Options]SelectBG.svg
 
-Optionsbuttoninsert      = [Options]buttoninsert.png
-Optionsbuttondelete      = [Options]buttondelete.png
+Optionsbuttoninsert      =[Options]buttoninsert.png
+Optionsbuttondelete      =[Options]buttondelete.png
 
 # # # SONGDIRS # # #
-Songdirsbuttonadd = [Songdirs]buttonplus.svg
-Songdirsbuttondelete = [Songdirs]buttonminus.svg
-Songdirsbuttonsave = [Songdirs]buttonsave.png
-Songdirsbuttonsavered = [Songdirs]buttonsavered.png
+Songdirsbuttonadd     =[Songdirs]buttonplus.svg
+Songdirsbuttondelete  =[Songdirs]buttonminus.svg
+Songdirsbuttonsave    =[Songdirs]buttonsave.png
+Songdirsbuttonsavered =[Songdirs]buttonsavered.png
 
 # # # MAIN   PARTY # # #
-TournamentButton  =[tournament]trophy.png
+TournamentButton      =[tournament]trophy.png
 
 # # # PARTY # # #
-Joker             =[party]Joker.png
-PartyPlayerButton =[party]playerButton.png
-PartyTeamButton1  =[party]roundTeamButton.png
-PartyTeamButton2  =[party]playerTeamButton.png
-PartyTeamButton3  =[party]winTeamButton1.png
-PartyTeamButton4  =[party]winTeamButton2.png
-PartyTeamButton5  =[party]winTeamButton3.png
-PartyRoundBG1     =[party]roundBG1.png
-PartyRoundBG2     =[party]roundBG2.png
-PartyRoundBG3     =[party]roundBG3.png
-PartyRoundBG4     =[party]roundBG4.png
-HDL_Pointer       =[party]pointer.png
-PartyTeamPoints   =[party]teamPoints.png
-PartyScoreDeco    =[party]scoreDecoration.png
-PartyScoreBG1     =[party]scoreBG1.png
-PartyScoreBG2     =[party]scoreBG2.png
-PartyWinDeco1     =[party]winDecoration.png
-PartyWinDeco2     =[party]winDecoration.png
-PartyWinDeco3     =[party]winDecoration.png
-PartyPlayerSelectBG = [party]playerselectbg.png
-PartyTrophy			=[tournament]trophy.png
-PartyWinner			=[tournament]winner.png
+Joker                 =[party]Joker.png
+PartyPlayerButton     =[party]playerButton.png
+PartyTeamButton1      =[party]roundTeamButton.png
+PartyTeamButton2      =[party]playerTeamButton.png
+PartyTeamButton3      =[party]winTeamButton1.png
+PartyTeamButton4      =[party]winTeamButton2.png
+PartyTeamButton5      =[party]winTeamButton3.png
+PartyRoundBG1         =[party]roundBG1.png
+PartyRoundBG2         =[party]roundBG2.png
+PartyRoundBG3         =[party]roundBG3.png
+PartyRoundBG4         =[party]roundBG4.png
+HDL_Pointer           =[party]pointer.png
+PartyTeamPoints       =[party]teamPoints.png
+PartyScoreDeco        =[party]scoreDecoration.png
+PartyScoreBG1         =[party]scoreBG1.png
+PartyScoreBG2         =[party]scoreBG2.png
+PartyWinDeco1         =[party]winDecoration.png
+PartyWinDeco2         =[party]winDecoration.png
+PartyWinDeco3         =[party]winDecoration.png
+PartyPlayerSelectBG   =[party]playerselectbg.png
+PartyTrophy           =[tournament]trophy.png
+PartyWinner           =[tournament]winner.png
+PartyChallengeButton  =[partyoptions]challenge.svg
+PartyClassicButton    =[partyoptions]classic.svg
+PartyTournamentButton =[partyoptions]tournament.svg
 
 
 # # # BACKGROUNDS # # #
-SongMenuBG  = [menu]songMenuBg.png
-SongMenuSelectBG  = [menu]songMenuSelectBg.png
+SongMenuBG            =[menu]songMenuBg.png
+SongMenuSelectBG      =[menu]songMenuSelectBg.png
 
 # # # NOTES # # #
 # sung notes - colorized with playercolors
-GrayLeft       = [sing]notesLeft.png
-GrayMid        = [sing]notesMid.png
-GrayRight      = [sing]notesRight.png
+GrayLeft              =[sing]notesLeft.png
+GrayMid               =[sing]notesMid.png
+GrayRight             =[sing]notesRight.png
 # unsung notes - colorized with playercolors
-NotePlainLeft  = [sing]notesPlainLeft.png
-NotePlainMid   = [sing]notesPlainMid.png
-NotePlainRight = [sing]notesPlainRight.png
+NotePlainLeft         =[sing]notesPlainLeft.png
+NotePlainMid          =[sing]notesPlainMid.png
+NotePlainRight        =[sing]notesPlainRight.png
 # the glow around unsung/sung notes - colorized with playercolors
-NoteBGLeft     = [sing]notesBgLeft.png
-NoteBGMid      = [sing]notesBgMid.png
-NoteBGRight    = [sing]notesBgRight.png
-Pause          = [sing]pause.png
+NoteBGLeft            =[sing]notesBgLeft.png
+NoteBGMid             =[sing]notesBgMid.png
+NoteBGRight           =[sing]notesBgRight.png
+Pause                 =[sing]pause.png
 
-GrayLeftRap       = [rap]notesLeft.png
-GrayMidRap        = [rap]notesMid.png
-GrayRightRap      = [rap]notesRight.png
-NotePlainLeftRap  = [rap]notesPlainLeft.png
-NotePlainMidRap   = [rap]notesPlainMid.png
-NotePlainRightRap = [rap]notesPlainRight.png
-NoteBGLeftRap     = [rap]notesBgLeft.png
-NoteBGMidRap      = [rap]notesBgMid.png
-NoteBGRightRap    = [rap]notesBgRight.png
+GrayLeftRap           =[rap]notesLeft.png
+GrayMidRap            =[rap]notesMid.png
+GrayRightRap          =[rap]notesRight.png
+NotePlainLeftRap      =[rap]notesPlainLeft.png
+NotePlainMidRap       =[rap]notesPlainMid.png
+NotePlainRightRap     =[rap]notesPlainRight.png
+NoteBGLeftRap         =[rap]notesBgLeft.png
+NoteBGMidRap          =[rap]notesBgMid.png
+NoteBGRightRap        =[rap]notesBgRight.png
 
 # # # EFFECTS # # #
-NoteStar        = [effect]goldenNoteStar.png
-NotePerfectStar = [effect]perfectNoteStar.png
+NoteStar              =[effect]goldenNoteStar.png
+NotePerfectStar       =[effect]perfectNoteStar.png
 
 
 # # # DOWNLOAD SCORE # # #
-ProgressBar  = [sing]timeBar.svg
+ProgressBar           =[sing]timeBar.svg
 
 # # # JUKEBOX # # #
-JukeboxTimeBar1  = [jukebox]timeBarBG.png
-JukeboxTimeBar = [jukebox]timeBar.jpg
-JukeboxSong = [jukebox]song.png
-JukeboxSongBackground = [jukebox]title.png
-JukeboxSongListBackground = [jukebox]songlist.png
-JukeboxSongbartopBackground= [jukebox]bartop.png
-JukeboxSongOptionsBackground = [jukebox]songoptions.png
-JukeboxLyric = [jukebox]lyric.png
-JukeboxRandom = [jukebox]random.png
-JukeboxRepeat = [jukebox]repeat.png
-JukeboxCurrentSongBackground = [jukebox]currentsong.png
-JukeboxSongListUp = [jukebox]songlistup.png
-JukeboxSongListDown = [jukebox]songlistdown.png
-JukeboxOptions = [jukebox]options.png
-JukeboxClose = [jukebox]close.png
-JukeboxFix = [jukebox]pin.png
-JukeboxSongMenuTimeBar  = [jukebox]timeBarSongMenuBG.png
-JukeboxSongMenuPlayPause = [jukebox]songmenuplaypause.png
-JukeboxSongMenuNext = [jukebox]songmenunext.png
-JukeboxSongMenuPrevious = [jukebox]songmenuprevious.png
-JukeboxSongMenuPlaylist = [jukebox]songmenuplaylist.png
-JukeboxSongSelection = [jukebox]songselection.png
-JukeboxButton = [jukebox]mainBar.png
+JukeboxTimeBar1                =[jukebox]timeBarBG.png
+JukeboxTimeBar                 =[jukebox]timeBar.jpg
+JukeboxSong                    =[jukebox]song.png
+JukeboxSongBackground          =[jukebox]title.png
+JukeboxSongListBackground      =[jukebox]songlist.png
+JukeboxSongbartopBackground    =[jukebox]bartop.png
+JukeboxSongOptionsBackground   =[jukebox]songoptions.png
+JukeboxLyric                   =[jukebox]lyric.png
+JukeboxRandom                  =[jukebox]random.png
+JukeboxRepeat                  =[jukebox]repeat.png
+JukeboxCurrentSongBackground   =[jukebox]currentsong.png
+JukeboxSongListUp              =[jukebox]songlistup.png
+JukeboxSongListDown            =[jukebox]songlistdown.png
+JukeboxOptions                 =[jukebox]options.png
+JukeboxClose                   =[jukebox]close.png
+JukeboxFix                     =[jukebox]pin.png
+JukeboxSongMenuTimeBar         =[jukebox]timeBarSongMenuBG.png
+JukeboxSongMenuPlayPause       =[jukebox]songmenuplaypause.png
+JukeboxSongMenuNext            =[jukebox]songmenunext.png
+JukeboxSongMenuPrevious        =[jukebox]songmenuprevious.png
+JukeboxSongMenuPlaylist        =[jukebox]songmenuplaylist.png
+JukeboxSongSelection           =[jukebox]songselection.png
+JukeboxButton                  =[jukebox]mainBar.png
 
 # # # COLOR PICKER # # #
-Picker   = [color]picker.jpg
-Pointer = [color]pointer.png
+Picker            =[color]picker.jpg
+Pointer           =[color]pointer.png
 
 # # # PLAYER   SELECTION # # #
-AvatarFrame = [name]frame.png
-CurrentPlayer = [name]player.png
-SelectFrame = [name]select.png
-AvatarFrame2 = [score]frame.png
+AvatarFrame       =[name]frame.png
+CurrentPlayer     =[name]player.png
+SelectFrame       =[name]select.png
+AvatarFrame2      =[score]frame.png
 
 # # # NO AVATARS # # #
-NoAvatar_P1  = [profiles]noavatar.svg
-NoAvatar_P2  = [profiles]noavatar.svg
-NoAvatar_P3  = [profiles]noavatar.svg
-NoAvatar_P4  = [profiles]noavatar.svg
-NoAvatar_P5  = [profiles]noavatar.svg
-NoAvatar_P6  = [profiles]noavatar.svg
+NoAvatar_P1       =[profiles]noavatar.svg
+NoAvatar_P2       =[profiles]noavatar.svg
+NoAvatar_P3       =[profiles]noavatar.svg
+NoAvatar_P4       =[profiles]noavatar.svg
+NoAvatar_P5       =[profiles]noavatar.svg
+NoAvatar_P6       =[profiles]noavatar.svg
 
 # # # ABOUT # # #
-LogoWeb = [About]logo_web.png
-AboutBG = [About]helperbg2.png
+LogoWeb           =[About]logo_web.png
+AboutBG           =[About]helperbg2.png
 
 # # # DEVELOPERS # # #
-Dhelperbg = [Developers]helperbg.png
+Dhelperbg         =[Developers]helperbg.png
 
 # # # Dirty Helpers # # #
-Rectangle  = [button]rectangle.png
-ButtonFade = [helper]buttonFade.png
+Rectangle         =[button]rectangle.png
+ButtonFade        =[helper]buttonFade.png
 
 # # # COMMON # # #
 
-AuxColor = auxcolor.svg
+AuxColor          =auxcolor.svg
 
-ButtonBack = buttonback.svg
-ButtonSort = buttonsort.svg
+ButtonBack        =buttonback.svg
+ButtonSort        =buttonsort.svg
 
-InfoBG1 = InfoBG1.svg
-InfoBG2 = InfoBG2.svg
-InfoBG3 = InfoBG3.svg
+InfoBG1           =InfoBG1.svg
+InfoBG2           =InfoBG2.svg
+InfoBG3           =InfoBG3.svg
 
-OptMenuBG  = [options]menubg.svg
+OptMenuBG         =[options]menubg.svg
 
-RoundedUP  = roundedup.svg
-RoundedDN  = roundeddn.svg
+RoundedUP         =roundedup.svg
+RoundedDN         =roundeddn.svg
 
-Select_ArrowLeft = [interface]select_arrow_left.svg
-Select_ArrowRight = [interface]select_arrow_right.svg
+Select_ArrowLeft  =[interface]select_arrow_left.svg
+Select_ArrowRight =[interface]select_arrow_right.svg
 
