Second version of song folder manager

--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -10057,9 +10057,9 @@ Y = 330
 [InsertUserPopupButton2Text1]
 Inheritance = SendScorePopupButton2Text1
 
-## ##########################################################################################################################################
+## #####################################################################
 ## Songdirs
-## ##########################################################################################################################################
+## #####################################################################
 
 [OptionsSongdirs]
 Texts = 5
@@ -10076,15 +10076,6 @@ Text = C_SONGDIRS
 
 [OptionsSongdirsStatic2]
 X = 50
-Y = 100
-W = 650
-H = 365
-Color = White
-Tex = Picker
-Type = Transparent #Colorized
-
-[OptionsSongdirsStatic3]
-X = 50
 Y = 510
 W = 650
 H = 40
@@ -10092,49 +10083,19 @@ Color = White
 Tex = MainBar
 Type = Colorized
 
-[OptionsSongdirsButtonAdd]
-Inheritance = OptionsButton
-X = 710
-Y = 500
-Tex = Songdirsbuttonadd
-
-[OptionsSongdirsButtonDelete]
-Inheritance = OptionsButton
-X = 710
-Y = 250
-Tex = Songdirsbuttondelete
-
-[OptionsSongdirsButtonSave]
-Inheritance = OptionsButton
-X = 740
-Y = 140
-W = 20
-H = 20
-SelectH = 15
-Tex = Songdirsbuttonsave
-
-[OptionsSongdirsButtonSaveRed]
-Inheritance = OptionsButton
-X = 740
-Y = 140
-W = 20
-H = 20
-SelectH = 15
-Tex = Songdirsbuttonsavered
-
 [OptionsSongdirsButtonExit]
 Inheritance = OptionsButtonExit2
 
 [OptionsSongdirsButtonFolderName]
 X = 50
 Y = 500
-W = 650
+W = 615  
 H = 40
 Tex = Button
 Color = ColorLight
 DColor = ColorDark
 Type = Transparent
-Texts = 1
+Texts = 2
 
 [OptionsSongdirsButtonFolderNameText1]
 X = 30
@@ -10143,6 +10104,288 @@ Font = 0
 Size = 22
 Align = 0  ## Left
 Color = White
+
+[OptionsSongdirsButtonFolderNameText2]
+X = 33
+Y = 10
+Font = 0
+Size = 22
+Align = 0  ## Left
+Color = ColorDark
+Text = SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME
+
+[OptionsSongdirsButtonClean]
+Inheritance = OptionsButton
+X = 670
+Y = 513
+W = 15
+H = 15
+SelectH = 13
+Tex = Songdirsbuttonclean
+Color = ColorLight
+DColor = ColorDark
+Type = Transparent
+
+[OptionsSongdirsButtonAdd]
+Inheritance = OptionsButton
+X = 710
+Y = 500
+W = 40  
+H = 40
+SelectH = 35
+Tex = Songdirsbuttonadd
+
+[OptionsSongdirsFolderButton1]
+Inheritance = OptionsButton
+X = 60
+Y = 112
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+
+[OptionsSongdirsFolderNameButton1]
+X = 90
+Y = 110
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton1]
+Inheritance = OptionsButton
+X = 666
+Y = 113
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton2]
+Inheritance = OptionsButton
+X = 60
+Y = 147
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+
+[OptionsSongdirsFolderNameButton2]
+X = 90
+Y = 145
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton2]
+Inheritance = OptionsButton
+X = 665
+Y = 148
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton3]
+Inheritance = OptionsButton
+X = 60
+Y = 182
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton3]
+X = 90
+Y = 180
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton3]
+Inheritance = OptionsButton
+X = 665
+Y = 183
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton4]
+Inheritance = OptionsButton
+X = 60
+Y = 217
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton4]
+X = 90
+Y = 215
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton4]
+Inheritance = OptionsButton
+X = 665
+Y = 218
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton5]
+Inheritance = OptionsButton
+X = 60
+Y = 252
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton5]
+X = 90
+Y = 250
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton5]
+Inheritance = OptionsButton
+X = 665
+Y = 253
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton6]
+Inheritance = OptionsButton
+X = 60
+Y = 287
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton6]
+X = 90
+Y = 285
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton6]
+Inheritance = OptionsButton
+X = 665
+Y = 288
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton7]
+Inheritance = OptionsButton
+X = 60
+Y = 322
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton7]
+X = 90
+Y = 320
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton7]
+Inheritance = OptionsButton
+X = 665
+Y = 323
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton8]
+Inheritance = OptionsButton
+X = 60
+Y = 357
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton8]
+X = 90
+Y = 355
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton8]
+Inheritance = OptionsButton
+X = 665
+Y = 358
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton9]
+Inheritance = OptionsButton
+X = 60
+Y = 392
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton9]
+X = 90
+Y = 390
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton9]
+Inheritance = OptionsButton
+X = 665
+Y = 393
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
+
+[OptionsSongdirsFolderButton10]
+Inheritance = OptionsButton
+X = 60
+Y = 427
+W = 25
+H = 25
+SelectH = 22
+Tex = Optionsbuttonsongdir
+
+[OptionsSongdirsFolderNameButton10]
+X = 90
+Y = 425
+W = 565
+H = 30
+Tex = Button
+
+[OptionsSongdirsDeleteFolderButton10]
+Inheritance = OptionsButton
+X = 665
+Y = 428
+W = 30
+H = 30
+SelectH = 27
+Tex = Songdirsbuttondelete
 
 
 [AboutMain]
