--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -170,10 +170,9 @@ Optionsbuttoninsert      =[Options]buttoninsert.png
 Optionsbuttondelete      =[Options]buttondelete.png
 
 # # # SONGDIRS # # #
-Songdirsbuttonadd     =[Songdirs]buttonplus.svg
-Songdirsbuttondelete  =[Songdirs]buttonminus.svg
-Songdirsbuttonsave    =[Songdirs]buttonsave.png
-Songdirsbuttonsavered =[Songdirs]buttonsavered.png
+Songdirsbuttonadd = [Songdirs]buttonplus.svg
+Songdirsbuttondelete = [Songdirs]buttonminus.svg
+Songdirsbuttonclean = [Songdirs]buttonclean.svg
 
 # # # MAIN   PARTY # # #
 TournamentButton      =[tournament]trophy.png
