--- a/game/themes/Argon.ini
+++ b/game/themes/Argon.ini
@@ -10057,15 +10057,15 @@ Y = 330
 [InsertUserPopupButton2Text1]
 Inheritance = SendScorePopupButton2Text1
 
-## #####################################################################
-## Songdirs
-## #####################################################################
+## ########################################## ##
+##                  Songdirs                  ##
+## ########################################## ##
 
 [OptionsSongdirs]
 Texts = 5
 
 [OptionsSongdirsBackground]
-Tex = OptionsGeneralBG
+Tex = OptionsSongDirBG
 
 [OptionsSongdirsStatic1]
 Inheritance = OptionsMenuBG
@@ -10074,319 +10074,146 @@ Inheritance = OptionsMenuBG
 Inheritance = OptionsTitleText
 Text = C_SONGDIRS
 
-[OptionsSongdirsStatic2]
-X = 50
-Y = 510
-W = 650
-H = 40
+[OptionsSongdirsText2]
+X = 90
+Y = 140
+Size = 20
+Font = 0
 Color = White
-Tex = MainBar
-Type = Colorized
+Text = SING_OPTIONS_SONGDIRS_DESC
 
 [OptionsSongdirsButtonExit]
 Inheritance = OptionsButtonExit2
 
 [OptionsSongdirsButtonFolderName]
-X = 50
+X = 90
 Y = 500
-W = 615  
-H = 40
-Tex = Button
-Color = ColorLight
-DColor = ColorDark
+W = 580
+H = 30
+Tex = Songdirsetpath
+Color = White
+DColor = GrayLightest
 Type = Transparent
 Texts = 2
 
 [OptionsSongdirsButtonFolderNameText1]
-X = 30
-Y = 10
+X = 10
+Y = 5
 Font = 0
-Size = 22
+Size = 18
 Align = 0  ## Left
 Color = White
 
 [OptionsSongdirsButtonFolderNameText2]
-X = 33
-Y = 10
+X = 290
+Y = 5
 Font = 0
-Size = 22
-Align = 0  ## Left
-Color = ColorDark
+Size = 18
+Align = 1
+Color = White
 Text = SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME
 
-[OptionsSongdirsButtonClean]
-Inheritance = OptionsButton
-X = 670
-Y = 513
-W = 15
-H = 15
-SelectH = 13
-Tex = Songdirsbuttonclean
-Color = ColorLight
-DColor = ColorDark
-Type = Transparent
-
 [OptionsSongdirsButtonAdd]
-Inheritance = OptionsButton
-X = 710
-Y = 500
-W = 40  
-H = 40
-SelectH = 35
+X = 678
+Y = 501
+W = 21
+H = 28
+Type = Transparent
+Color = ColorDark
 Tex = Songdirsbuttonadd
 
 [OptionsSongdirsFolderButton1]
 Inheritance = OptionsButton
 X = 60
-Y = 112
-W = 25
+Y = 190
+W = 21
 H = 25
-SelectH = 22
+SelectH = 25
 Tex = Optionsbuttonsongdir
 
 
 [OptionsSongdirsFolderNameButton1]
 X = 90
-Y = 110
-W = 565
+Y = 187
+W = 580
 H = 30
-Tex = Button
+Type = Transparent
+Color = ColorLight
+Tex = Songdirrectangle
 
 [OptionsSongdirsDeleteFolderButton1]
 Inheritance = OptionsButton
-X = 666
-Y = 113
-W = 30
-H = 30
-SelectH = 27
+X = 678
+Y = 193
+W = 18
+H = 24
+SelectH = 24
 Tex = Songdirsbuttondelete
 
 [OptionsSongdirsFolderButton2]
-Inheritance = OptionsButton
-X = 60
-Y = 147
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
-
+Inheritance = OptionsSongdirsFolderButton1
+Y = 225
 
 [OptionsSongdirsFolderNameButton2]
-X = 90
-Y = 145
-W = 565
-H = 30
-Tex = Button
+Inheritance = OptionsSongdirsFolderNameButton1
+Y = 222
 
 [OptionsSongdirsDeleteFolderButton2]
-Inheritance = OptionsButton
-X = 665
-Y = 148
-W = 30
-H = 30
-SelectH = 27
+Inheritance = OptionsSongdirsDeleteFolderButton1
+Y = 224
 Tex = Songdirsbuttondelete
 
 [OptionsSongdirsFolderButton3]
-Inheritance = OptionsButton
-X = 60
-Y = 182
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
+Inheritance = OptionsSongdirsFolderButton1
+Y = 260
 
 [OptionsSongdirsFolderNameButton3]
-X = 90
-Y = 180
-W = 565
-H = 30
-Tex = Button
+Inheritance = OptionsSongdirsFolderNameButton1
+Y = 257
 
 [OptionsSongdirsDeleteFolderButton3]
-Inheritance = OptionsButton
-X = 665
-Y = 183
-W = 30
-H = 30
-SelectH = 27
+Inheritance = OptionsSongdirsDeleteFolderButton1
+Y = 260
 Tex = Songdirsbuttondelete
 
 [OptionsSongdirsFolderButton4]
-Inheritance = OptionsButton
-X = 60
-Y = 217
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
+Inheritance = OptionsSongdirsFolderButton1
+Y = 295
 
 [OptionsSongdirsFolderNameButton4]
-X = 90
-Y = 215
-W = 565
-H = 30
-Tex = Button
+Inheritance = OptionsSongdirsFolderNameButton1
+Y = 292
 
 [OptionsSongdirsDeleteFolderButton4]
-Inheritance = OptionsButton
-X = 665
-Y = 218
-W = 30
-H = 30
-SelectH = 27
+Inheritance = OptionsSongdirsDeleteFolderButton1
+Y = 295
 Tex = Songdirsbuttondelete
 
 [OptionsSongdirsFolderButton5]
-Inheritance = OptionsButton
-X = 60
-Y = 252
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
+Inheritance = OptionsSongdirsFolderButton1
+Y = 330
 
 [OptionsSongdirsFolderNameButton5]
-X = 90
-Y = 250
-W = 565
-H = 30
-Tex = Button
+Inheritance = OptionsSongdirsFolderNameButton1
+Y = 327
 
 [OptionsSongdirsDeleteFolderButton5]
-Inheritance = OptionsButton
-X = 665
-Y = 253
-W = 30
-H = 30
-SelectH = 27
+Inheritance = OptionsSongdirsDeleteFolderButton1
+Y = 332
 Tex = Songdirsbuttondelete
 
 [OptionsSongdirsFolderButton6]
-Inheritance = OptionsButton
-X = 60
-Y = 287
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
+Inheritance = OptionsSongdirsFolderButton1
+Y = 365
 
 [OptionsSongdirsFolderNameButton6]
-X = 90
-Y = 285
-W = 565
-H = 30
-Tex = Button
+Inheritance = OptionsSongdirsFolderNameButton1
+Y = 362
 
 [OptionsSongdirsDeleteFolderButton6]
-Inheritance = OptionsButton
-X = 665
-Y = 288
-W = 30
-H = 30
-SelectH = 27
+Inheritance = OptionsSongdirsDeleteFolderButton1
+Y = 365
 Tex = Songdirsbuttondelete
-
-[OptionsSongdirsFolderButton7]
-Inheritance = OptionsButton
-X = 60
-Y = 322
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
-
-[OptionsSongdirsFolderNameButton7]
-X = 90
-Y = 320
-W = 565
-H = 30
-Tex = Button
-
-[OptionsSongdirsDeleteFolderButton7]
-Inheritance = OptionsButton
-X = 665
-Y = 323
-W = 30
-H = 30
-SelectH = 27
-Tex = Songdirsbuttondelete
-
-[OptionsSongdirsFolderButton8]
-Inheritance = OptionsButton
-X = 60
-Y = 357
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
-
-[OptionsSongdirsFolderNameButton8]
-X = 90
-Y = 355
-W = 565
-H = 30
-Tex = Button
-
-[OptionsSongdirsDeleteFolderButton8]
-Inheritance = OptionsButton
-X = 665
-Y = 358
-W = 30
-H = 30
-SelectH = 27
-Tex = Songdirsbuttondelete
-
-[OptionsSongdirsFolderButton9]
-Inheritance = OptionsButton
-X = 60
-Y = 392
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
-
-[OptionsSongdirsFolderNameButton9]
-X = 90
-Y = 390
-W = 565
-H = 30
-Tex = Button
-
-[OptionsSongdirsDeleteFolderButton9]
-Inheritance = OptionsButton
-X = 665
-Y = 393
-W = 30
-H = 30
-SelectH = 27
-Tex = Songdirsbuttondelete
-
-[OptionsSongdirsFolderButton10]
-Inheritance = OptionsButton
-X = 60
-Y = 427
-W = 25
-H = 25
-SelectH = 22
-Tex = Optionsbuttonsongdir
-
-[OptionsSongdirsFolderNameButton10]
-X = 90
-Y = 425
-W = 565
-H = 30
-Tex = Button
-
-[OptionsSongdirsDeleteFolderButton10]
-Inheritance = OptionsButton
-X = 665
-Y = 428
-W = 30
-H = 30
-SelectH = 27
-Tex = Songdirsbuttondelete
-
 
 [AboutMain]
 Texts = 2
