--- a/game/themes/common/Basic Violet.ini
+++ b/game/themes/common/Basic Violet.ini
@@ -58,6 +58,7 @@ OptionsAdvancedBG      =[bg-options]advanced.jpg
 OptionsInternetBG      =[bg-options]internet.jpg
 OptionsWebcamBG        =[bg-options]webcam.jpg
 OptionsProfilesBG      =[bg-options]profiles.jpg
+OptionsSongDirBG       =[bg-options]songdir.jpg
 
 # # # SONG SELECT # # #
 SongSelection1up      =[main]songSelection1up.svg
@@ -169,10 +170,12 @@ SelectBG                 =[Options]SelectBG.svg
 Optionsbuttoninsert      =[Options]buttoninsert.png
 Optionsbuttondelete      =[Options]buttondelete.png
 
-# # # SONGDIRS # # #
-Songdirsbuttonadd = [Songdirs]buttonplus.svg
-Songdirsbuttondelete = [Songdirs]buttonminus.svg
-Songdirsbuttonclean = [Songdirs]buttonclean.svg
+# # # SONGDIR # # #
+Songdirsetpath           =[Songdir]setpathbar.svg
+Songdirrectangle         =[Songdir]rectangle.png
+Songdirsbuttonadd        =[Songdirs]buttonadd.svg
+Songdirsbuttondelete     =[Songdirs]buttondel.svg
+Songdirsbuttonclean      =[Songdirs]buttonclean.svg
 
 # # # MAIN   PARTY # # #
 TournamentButton      =[tournament]trophy.png
